spaceward/src/main.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Alliance Neue Regular";
  src:
    url("/fonts/alliance-neueregular-webfont.woff2") format("woff2"),
    url("/fonts/alliance-neueregular-webfont.woff") format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Alliance Neue Bold";
  src:
    url("/fonts/alliance-neuebold-webfont.woff2") format("woff2"),
    url("/fonts/alliance-neuebold-webfont.woff") format("woff");
  font-display: swap;
}

@layer base {
  :root {
    --background: 0 0% 95%;
    --foreground: 0 0% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;

    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;

    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;

    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;

    --accent: 313, 100%, 84%;
    --accent-foreground: 0 0% 9%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 70%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 7%;
    --foreground: 0 0% 98%;

    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;

    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;

    --accent: 183, 100%, 17%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground font-sans;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-display !tracking-wide;
  }
}

.svg-animation {
  position: absolute;
  left: -8px;
  top: -8px;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  animation: 400ms ease 0s 1 normal none running animation-plwpox;
}

@keyframes animation-plwpox {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.svg-animation rect {
  animation: 1.2s linear 0s infinite normal none running animation-1fdn7aw;
  stroke: hsl(var(--accent));
}

@keyframes animation-1fdn7aw {
  0% {
    stroke-dashoffset: 0;
  }
}

.actions-trigger {
  --grid-id: minmax(50px, 0.25fr);
  --grid-type: minmax(150px, 3fr);
  --grid-info: minmax(150px, 3fr);
  --grid-date: minmax(200px, 3fr);
  --grid-status: minmax(120px, 1fr);
  grid-template-columns: var(--grid-id) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status);
  grid-template-areas: "id type info date status";
  width: 100%;
  display: grid;
  align-items: center;
  white-space: nowrap;

}

